[package]
name = "template-rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",

] }
embassy-rp = { version = "0.2.0", features = [
    "rp235xa",
    "binary-info",
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
postcard-rpc = { version = "0.11.0", features = ["embassy-usb-0_3-server"] }
postcard = { version = "1.1.0" }
postcard-schema = { version = "0.2.0", features = ["derive"] }
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
static_cell = "2.1"
template-icd = { path = "../icd" }
critical-section = "1.2.0"
embassy-usb-logger = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", rev = "227e073fca97bcbcec42d9705e0a8ef19fc433b5" }
log = "0.4.22"
uc8151 = { git = "https://github.com/9names/uc8151-rs.git", features = [
    "graphics",
] }
embedded-graphics = "0.8.1"
embedded-text = "0.7.2"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
heapless = { version = "0.8", features = ["serde"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "227e073fca97bcbcec42d9705e0a8ef19fc433b5" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "227e073fca97bcbcec42d9705e0a8ef19fc433b5" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "227e073fca97bcbcec42d9705e0a8ef19fc433b5" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "227e073fca97bcbcec42d9705e0a8ef19fc433b5" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "227e073fca97bcbcec42d9705e0a8ef19fc433b5" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "227e073fca97bcbcec42d9705e0a8ef19fc433b5" }
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy", rev = "227e073fca97bcbcec42d9705e0a8ef19fc433b5" }
